--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/profile_image.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
